wacc/test/golden/semanticErr.array.badIndex
# Too much indexing!
# Thanks to David Pan

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int[] a = [1];
  println a[1][2]
end


Semantic error in test/wacc_examples/invalid/semanticErr/array/badIndex.wacc (line 14, column 15):
type error: expected an array (T[] for some type T) but found an int
>   int[] a = [1];
>   println a[1][2]
>               ^
> end

